classDiagram
    class Owner {
        +String name
        +int available_minutes
        +String preferences
        +List~Pet~ pets
        +add_pet(pet) void
        +get_all_tasks() List~Task~
        +get_summary() String
    }

    class Pet {
        +String name
        +String species
        +int age
        +String notes
        +List~Task~ tasks
        +add_task(task) void
        +get_tasks() List~Task~
        +get_pending_tasks() List~Task~
    }

    class Task {
        +String title
        +int duration_minutes
        +String priority
        +String category
        +String frequency
        +bool is_required
        +bool completed
        +String start_time
        +Date due_date
        +is_high_priority() bool
        +mark_complete() void
        +mark_incomplete() void
        +next_due_date() Date
    }

    class Scheduler {
        +Owner owner
        +get_all_tasks() List~Task~
        +generate_plan() DailyPlan
        +sort_by_time(tasks) List~Task~
        +filter_by_status(completed) List~Task~
        +filter_by_pet(pet_name) List~Task~
        +detect_conflicts() List~String~
        +complete_task(task, pet) Task
        -_sort_tasks() List~Task~
        -_fits_in_time(task, remaining_minutes) bool
    }

    class DailyPlan {
        +Owner owner
        +List~Task~ scheduled_tasks
        +List~Task~ skipped_tasks
        +int total_minutes_used
        +DateTime generated_at
        +explain() String
        +display() List
    }

    Owner "1" --> "1..*" Pet : owns
    Pet "1" --> "0..*" Task : has
    Scheduler --> Owner : uses
    Scheduler --> DailyPlan : produces
    DailyPlan --> Owner : references
    DailyPlan "1" --> "0..*" Task : scheduled_tasks
    DailyPlan "1" --> "0..*" Task : skipped_tasks